Imported Upstream version 2.6.1

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
                             SUNDIALS 
     SUite of Nonlinear and DIfferential/ALgebraic equation Solvers
-                   Release 2.5.0, March 2012
-            Alan Hindmarsh, Radu Serban, Carol Woodward
+                   Release 2.6.1, March 2015
+      Alan Hindmarsh, Daniel Reynolds, Radu Serban, Carol Woodward
            Center for Applied Scientific Computing, LLNL
 
 The family of solvers referred to as SUNDIALS consists of the following solvers:
@@ -33,7 +33,7 @@ Warning to users who receive more than one of these individual solvers
 at different times: The mixing of old and new versions SUNDIALS may fail.  
 To avoid such failures, obtain all desired solvers at the same time.
 
-For installation directions see the file INSTALL_NOTES.
+For installation directions see the file INSTALL_GUIDE.pdf.
 
 For additional information on a particular solver, see the README file
 in the solver directory (e.g. src/cvode/README).
@@ -56,5 +56,6 @@ Release history:
 | Nov 2006 |   2.3.0  |          |  2.5.0   |  2.5.0   |  2.5.0   |          |  2.5.0   |
 | May 2009 |   2.4.0  |          |  2.6.0   |  2.6.0   |  2.6.0   |  1.0.0   |  2.6.0   |
 | Mar 2012 |   2.5.0  |          |  2.7.0   |  2.7.0   |  2.7.0   |  1.1.0   |  2.7.0   |
-| Sep 2013 |   2.6.0  |  1.0.0   |  2.8.0   |  2.8.0   |  2.8.0   |  1.2.0   |  2.8.0   |
+| Mar 2015 |   2.6.0  |  1.0.0   |  2.8.0   |  2.8.0   |  2.8.0   |  1.2.0   |  2.8.0   |
+| Mar 2015 |   2.6.1  |  1.0.1   |  2.8.1   |  2.8.1   |  2.8.1   |  1.2.1   |  2.8.1   |
 +----------+----------+----------+----------+----------+----------+---------------------+
