--- a/src/ida/README
+++ b/src/ida/README
@@ -1,5 +1,5 @@
                                IDA
-                    Release 2.8.0, ??? 2014
+                    Release 2.8.1, March 30, 2015
                  Alan C. Hindmarsh and Radu Serban 
             Center for Applied Scientific Computing, LLNL
 
@@ -12,7 +12,8 @@ IDA can be used both on serial and parallel computers.  The main
 difference is in the NVECTOR module of vector kernels.  The desired
 version is obtained when compiling the example files by linking the
 appropriate library of NVECTOR kernels.  In the parallel versions,
-communication between processors is done with MPI, with OpenMP, or with Pthreads.
+communication between processors is done with MPI, with OpenMP, 
+or with Pthreads.
 
 When used with the serial NVECTOR module, IDA provides both direct 
 (dense and band) linear solvers and preconditioned Krylov (iterative) 
@@ -26,8 +27,8 @@ preconditioner.
 
 IDA is part of a software family called SUNDIALS: SUite of Nonlinear and 
 DIfferential/ALgebraic equation Solvers [3].  This suite consists of CVODE, 
-CVODES, IDA, IDAS, and KINSOL.  The directory structure of the package supplied 
-reflects this family relationship.
+CVODES, ARKode, IDA, IDAS, and KINSOL.  The directory structure of the 
+package supplied reflects this family relationship.
 
 For use with Fortran applications, a set of Fortran/C interface routines,
 called FIDA, is also supplied.  These are written in C, but assume that
@@ -52,19 +53,19 @@ and the IDA Examples [2] (ida_examples.pdf) documents.
 B. Installation
 ---------------
 
-For basic installation instructions see the file /sundials/INSTALL_NOTES. 
-For complete installation instructions see the "IDA Installation Procedure"
+For basic installation instructions see the file /sundials/INSTALL_GUIDE.pdf. 
+For complete installation instructions see the "Installation Procedure"
 chapter in the IDA User Guide.
 
 
 C. References
 -------------
 
-[1] A. C. Hindmarsh, R. Serban, and A. Collier, "User Documentation for IDA v2.8.0," 
-    LLNL technical report UCRL-SM-208112, ??? 2014.
+[1] A. C. Hindmarsh, R. Serban, and A. Collier, "User Documentation for IDA v2.8.1," 
+    LLNL technical report UCRL-SM-208112, March 2015.
 
-[2] A. C. Hindmarsh, R. Serban, and A. Collier, "Example Programs for IDA v2.8.0," 
-    LLNL technical report UCRL-SM-208113, ??? 2014.
+[2] A. C. Hindmarsh, R. Serban, and A. Collier, "Example Programs for IDA v2.8.1," 
+    LLNL technical report UCRL-SM-208113, March 2015.
 
 [3] A. C. Hindmarsh, P. N. Brown, K. E. Grant, S. L. Lee, R. Serban, 
     D. E. Shumaker, and C. S. Woodward, "SUNDIALS, Suite of Nonlinear and 
@@ -83,7 +84,8 @@ C. References
 D. Releases
 -----------
 
-v. 2.8.0   - ???  2014
+v. 2.8.1   - Mar. 2015
+v. 2.8.0   - Mar. 2015
 v. 2.7.0   - Mar. 2012
 v. 2.6.0   - May  2009
 v. 2.5.0   - Nov. 2006
@@ -99,15 +101,24 @@ v. 1.0     - Feb. 1999 (date written)
 E. Revision History
 -------------------
 
-v. 2.7.0 (Mar. 2012) ---> v. 2.8.0 (??? 2014)
+v. 2.8.0 (Mar. 2015) ---> v. 2.8.1 (Mar. 2015)
+---------------------------------------------
+
+- Bug fixes
+  - Fixed loop limit bug in SlsAddMat function.
+  - In interfaces to KLU and SuperLUMT, added #include lines, 
+    and removed redundant KLU structure allocations.
+  - Minor documentation updates
+ 
+
+v. 2.7.0 (Mar. 2012) ---> v. 2.8.0 (Mar. 2015)
 ---------------------------------------------
 
 - New features
    - Two major additions were made to the linear system solvers that are
-     availble for use with the IDA solver.  In the serial case, an
-     interface to the KLU sparse direct solver was added.
-     For the parallel case, an interface to SuperLU_MT (the multi-threaded
-     version of SuperLU) was added as a thread-parallel sparse direct solver option.
+     availble for use with the IDA solver.  If using the supplied serial
+     NVECTOR module, interfaces to the KLU sparse direct solver and to the
+     SuperLU_MT solver (the multi-threaded version of SuperLU) were added.
      As part of these additions, a sparse matrix (CSC format) structure 
      was added to IDA.
    - Two new NVECTOR modules have been added for parallel computing
