--- a/src/nvec_pthreads/README
+++ b/src/nvec_pthreads/README
@@ -1,5 +1,7 @@
                      NVECTOR_PTHREADS
-               Release 1.0.0, ??? 2014
+                 released as part of SUNDIALS
+    SUite of Nonlinear and DIfferential/ALgebraic equation Solvers
+                   Release 2.6.1, March 2015
 
 
 Pthreads implementation of the NVECTOR module for SUNDIALS. 
@@ -30,39 +32,28 @@ is available in the solver's subdirectory under doc/.
 B. Installation
 ---------------
 
-For basic installation instructions see /sundials/INSTALL_NOTES. 
+For basic installation instructions see /sundials/INSTALL_GUIDE.pdf. 
 For complete installation instructions see any of the user guides.
 
 
-C. References
--------------
-
-[1] A. C. Hindmarsh and R. Serban, "User Documentation for CVODE v2.8.0," 
-    LLNL technical report UCRL-MA-208108, ??? 2014.
-
-[2] A. C. Hindmarsh and R. Serban, "User Documentation for CVODES v2.8.0," 
-    LLNL technical report UCRL-MA-208111, ??? 2014.
-
-[3] A. C. Hindmarsh, R. Serban,and A. Collier, "User Documentation for IDA v2.8.0," 
-    LLNL technical report UCRL-MA-208112, ??? 2014.
-
-[4] R. Serban, C. Petra, and A. C. Hindmarsh  "User Documentation for IDAS v1.2.0," 
-    LLNL technical report UCRL-SM-234051, ??? 2014.
-
-[5] A. M. Collier, A. C. Hindmarsh, R. Serban,and C. S. Woodward, "User 
-    Documentation for KINSOL v2.8.0," LLNL technical report UCRL-MA-208116, 
-    ??? 2014.
-
-[6] D. R. Reynolds, ARKODE User Guide ???
-
-
-D. Releases
+C. Releases
 -----------
 
-v. 1.0.0 - ??? 2014
+v. 2.6.1 - Mar. 2015
+v. 2.6.0 - Mar. 2015
 
 
-E. Revision History
+
+D. Revision History
 -------------------
 
-Initial implementation
+v. 2.6.0 (Mar. 2015) ---> v. 2.6.0 (Mar. 2015)
+---------------------------------------------
+
+- none
+
+v. 2.5.0 (Mar. 2012) ---> v. 2.6.0 (Mar.2015)
+---------------------------------------------
+
+- This package added with SUNDIALS v.2.6.0.
+
