--- a/examples/cvodes/serial/README
+++ b/examples/cvodes/serial/README
@@ -32,15 +32,37 @@ List of serial CVODES examples
   cvsHessian_ASA_FSA    : ASA example for computing Hessian
   cvsRoberts_ASAi_dns   : chemical kinetics - adjoint sensitivity
 
-Sample results:
 
-  SUNDIALS was built with the following options:
+SUNDIALS was built with the following Cmake options:
 
-  ./configure CC=gcc F77=gfortran CFLAGS="-g3 -O0" FFLAGS="-g3 -O0" --with-blas-lapack-libs="-L/home/radu/apps/lib -lSimTKlapack" --enable-examples
-
-  System Architecture: IA-32
-  Processor Type: Intel Pentium 4 Xeon DP (i686)
-  Operating System: Red Hat Enterprise Linux WS 3 (Taroon Update 7)
-  C/Fortran Compilers: gcc/gfortran v4.1.0
-
-  The SimTKlapack library provides ATLAS-tunned Blas and Lapack functions
+BUILD_ARKODE=ON
+BUILD_CVODE=ON
+BUILD_CVODES=ON
+BUILD_IDA=ON
+BUILD_IDAS=ON
+BUILD_KINSOL=ON
+BUILD_SHARED_LIBS=ON
+BUILD_STATIC_LIBS=ON
+CMAKE_INSTALL_PREFIX=/usr/casc/sundials/builddir/instdir
+CXX_ENABLE=ON
+EXAMPLES_ENABLE=ON
+EXAMPLES_INSTALL=ON
+EXAMPLES_INSTALL_PATH=/usr/casc/sundials/builddir/instdir/examples
+F90_ENABLE=ON
+FCMIX_ENABLE=ON
+KLU_ENABLE=ON
+KLU_INCLUDE_DIR=/usr/casc/sundials/apps/rh6/suitesparse/4.2.1/include
+KLU_LIBRARY_DIR=/usr/casc/sundials/apps/rh6/suitesparse/4.2.1/lib
+LAPACK_ENABLE=ON
+LAPACK_LIBRARIES=/usr/casc/sundials/apps/rh6/lapack/3.5.0/lib/liblapack.so;/usr/casc/sundials/apps/rh6/lapack/3.5.0/lib/libblas.so
+MPI_ENABLE=ON
+MPI_MPICC=/usr/casc/sundials/apps/rh6/openmpi/1.4.5/bin/mpicc
+MPI_MPICXX=/usr/casc/sundials/apps/rh6/openmpi/1.4.5/bin/mpicxx
+MPI_MPIF77=/usr/casc/sundials/apps/rh6/openmpi/1.4.5/bin/mpif77
+MPI_MPIF90=/usr/casc/sundials/apps/rh6/openmpi/1.4.5/bin/mpif90
+MPI_RUN_COMMAND=mpirun
+OPENMP_ENABLE=OFF
+PTHREAD_ENABLE=ON
+SUNDIALS_PRECISION=double
+SUPERLUMT_ENABLE=OFF
+USE_GENERIC_MATH=ON
