--- a/src/kinsol/README
+++ b/src/kinsol/README
@@ -1,12 +1,14 @@
                              KINSOL
-                   Release 2.8.0, ??? 2014
-           Aaron Collier, Alan C. Hindmarsh, and Radu Serban
+                   Release 2.8.1, arch 30, 2015
+     Aaron Collier, Alan C. Hindmarsh, Radu Serban, and Carol S. Woodward
              Center for Applied Scientific Computing, LLNL
 
 KINSOL is a solver for nonlinear algebraic systems which can be
-described as F(u) = 0.  It is newly rewritten in the C language and based
+described as F(u) = 0.  It is written in the C language and based
 on the previous Fortran package NKSOL [4], written by Peter Brown and
-Youcef Saad.
+Youcef Saad.  Nonlinear solver methods available include Newton-Krylov,
+Picard, and fixed point.  Both Picard and fixed point can be accelerated
+with Anderson acceleration.
 
 KINSOL can be used both on serial and parallel computers.
 The difference is only in the NVECTOR module of vector functions.
@@ -29,7 +31,7 @@ acceleration of the Krylov solvers.
 
 KINSOL is part of a software family called SUNDIALS: SUite of Nonlinear
 and DIfferential/ALgebraic equation Solvers.  This suite consists of
-CVODE, KINSOL, and IDA, and variants of these.  The directory
+CVODE, CVODES, ARKode, KINSOL, IDA, and IDAS.  The directory
 structure of the package supplied reflects this family relationship.
 
 For use with Fortran applications, a set of Fortran/C interface routines,
@@ -51,8 +53,8 @@ and the KINSOL Examples [2] (kin_examples.pdf) documents.
 B. Installation
 ---------------
 
-For basic installation instructions see the file /sundials/INSTALL_NOTES. 
-For complete installation instructions see the "KINSOL Installation Procedure"
+For basic installation instructions see the file /sundials/INSTALL_GUIDE.pdf. 
+For complete installation instructions see the "Installation Procedure"
 chapter in the KINSOL User Guide [1].
 
 
@@ -60,11 +62,11 @@ C. References
 -------------
 
 [1] A. M. Collier, A. C. Hindmarsh, R. Serban, and C. S. Woodward,
-    "User Documentation for KINSOL v2.8.0," LLNL technical report
-    UCRL-SM-208116, ??? 2014.
+    "User Documentation for KINSOL v2.8.1," LLNL technical report
+    UCRL-SM-208116, March 2015.
 
-[2] A. M. Collier and R. Serban, "Example Programs for KINSOL v2.8.0,"
-    LLNL technical report UCRL-SM-208114, ??? 2014.
+[2] A. M. Collier and R. Serban, "Example Programs for KINSOL v2.8.1,"
+    LLNL technical report UCRL-SM-208114, March 2015.
 
 [3] A. C. Hindmarsh, P. N. Brown, K. E. Grant, S. L. Lee, R. Serban, 
     D. E. Shumaker, and C. S. Woodward, "SUNDIALS, Suite of Nonlinear and 
@@ -83,7 +85,8 @@ C. References
 D. Releases
 -----------
 
-v. 2.8.0   - ???  2014
+v. 2.8.1   - Mar. 2015
+v. 2.8.0   - Mar. 2015
 v. 2.7.0   - Mar. 2012
 v. 2.6.0   - May  2009
 v. 2.5.0   - Nov. 2006
@@ -99,7 +102,16 @@ v. 1.0     - Aug. 1998 (date written)
 E. Revision History
 -------------------
 
-v. 2.7.0 (Mar. 2012) ---> v. 2.8.0 (??? 2014)
+v. 2.8.0 (Mar. 2015) ---> v. 2.8.1 (Mar. 2015)
+---------------------------------------------
+
+- Bug fixes
+  - Fixed loop limit bug in SlsAddMat function.
+  - In interfaces to KLU and SuperLUMT, added #include lines, 
+    and removed redundant KLU structure allocations.
+  - Minor documentation updates
+ 
+v. 2.7.0 (Mar. 2012) ---> v. 2.8.0 (Mar. 2015)
 ---------------------------------------------
 
 - New features
@@ -107,11 +119,10 @@ v. 2.7.0 (Mar. 2012) ---> v. 2.8.0 (??? 2014)
      (KINSol argument strategy).  One is fixed-point iteration,
      and the other is Picard iteration.  Both can be accelerated by use
      of the Anderson acceleration method.
-   - Three additions were made to the linear system solvers that are
-     availble for use with the KINSOL solver.  In the serial case, an
-     interface to the KLU sparse direct solver was added.
-     For the parallel case, an interface to SuperLU_MT (the multi-threaded
-     version of SuperLU) was added as a thread-parallel sparse direct solver option.
+   - Three major additions were made to the linear system solvers that are
+     availble for use with the KINSOL solver.  If using the supplied serial
+     NVECTOR module, interfaces to the KLU sparse direct solver and to the
+     SuperLU_MT solver (the multi-threaded version of SuperLU) were added.
      As part of these additions, a sparse matrix (CSC format) structure 
      was added to KINSOL.  Finally, a variation of GMRES called Flexible GMRES
      was added.
